# IntelliScheduler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  resources.qrc
doc/: create.sql
src/: AppConfig.hpp  types.hpp
src/controller/: AppManager.cpp  AppManager.h  EventManager.cpp  EventManager.h
src/controller/Services/: EventICalFormatService.cpp  EventICalFormatService.h  EventReminderService.cpp  EventReminderService.h  EventService.cpp  EventService.h  EventSubscriptionService.cpp  EventSubscriptionService.h
src/core/: scheduler.hpp
src/dao/: CMakeLists.txt  EventDao.cpp  EventDao.h
src/db/: DBManager.cpp  DBManager.h
src/entity/: Alarm.cpp  Alarm.h  Event.cpp  Event.h  EventCategories.cpp  EventCategories.h  Recurrence.cpp  Recurrence.h
src/interface/: IEventSubscriber.cpp  IEventSubscriber.h
src/tools/: EventRepository.cpp  EventRepository.h
src/uitls/: OpenAIAPI.cpp  OpenAIAPI.h
src/utils/: CMakeLists.txt  DateUtil.cpp  DateUtil.h  EnumUtils.h  EventUtils.cpp  EventUtils.h  OpenAIAPI.cpp  OpenAIAPI.h
src/view/: eventview.cpp  eventview.h  eventview.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  monthview.cpp  monthview.h  monthview.ui  weekview.cpp  weekview.h  weekview.ui
src/widget/: canlendarwidget.cpp  canlendarwidget.h  canlendarwidget.ui  dategridwidget.cpp  dategridwidget.h  dategridwidget.ui  eventlistitem.cpp  eventlistitem.h  eventlistitem.ui  eventlistwidget.cpp  eventlistwidget.h  gridcell.cpp  gridcell.h  gridcell.ui  gridview.cpp  gridview.h  searchline.cpp  searchline.h  searchline.ui  weekeventcell.cpp  weekeventcell.h  weekeventcell.ui  weekevtcelllabel.cpp  weekevtcelllabel.h  weekevtcelllabel.ui  weektablewidget.cpp  weektablewidget.h  weektablewidget.ui
src/widget/event_view/: categorycombobox.cpp  categorycombobox.h  customalertdialog.cpp  customalertdialog.h  customalertdialog.ui  repeatdialog.cpp  repeatdialog.h  repeatdialog.ui
tests/: CMakeLists.txt  EventViewTest.cpp  WeekEvtCellLabelTest.cpp  WeekTableWidgetTest.cpp  monthviewTest.cpp  monthviewTest.h
